# While-the-tea-is-brewing

./: .env.example  .gitignore  OPERATIONS.md  README.md  TELEGRAM_LONG_POSTS_MEMO.md  pyproject.toml
.github/workflows/: prepare-daily-queue.yml  publish-from-queue.yml
src/release_pipeline/: __init__.py  cli.py  config.py  models.py  pipeline.py  queue_state.py  state.py  telegram.py  tmdb.py
state/: posted_titles.json  publish_queue.json
tests/: test_formatting.py  test_pipeline.py
